--- a/Skclusive.Blazor.FlightFinder/FlightFinder.State/FlightFinder.State.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.State/FlightFinder.State.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Skclusive.Blazor.TodoApp.State</AssemblyName>
-    <RootNamespace>Skclusive.Blazor.TodoApp</RootNamespace>
+    <AssemblyName>Skclusive.Blazor.FlightFinder.State</AssemblyName>
+    <RootNamespace>Skclusive.Blazor.FlightFinder</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.2" />
-    <PackageReference Include="Skclusive.Mobx.StateTree" Version="1.0.3" />
+    <PackageReference Include="Skclusive.Mobx.StateTree" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
