Todo Edit issue fixed

--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
@@ -16,7 +16,8 @@
 
   <ItemGroup>
     <PackageReference Include="Skclusive.Mobx.Component" Version="1.0.4" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="1.0.2" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="1.0.3" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
