--- a/Skclusive.Blazor.FlightFinder/FlightFinder.State/FlightFinder.State.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.State/FlightFinder.State.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.2" />
-    <PackageReference Include="Skclusive.Mobx.StateTree" Version="1.0.2" />
+    <PackageReference Include="Skclusive.Mobx.StateTree" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
