TodoDesktop sample added

--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
@@ -24,4 +24,11 @@
     <ProjectReference Include="..\TodoApp.State\TodoApp.State.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Properties\launchSettings.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
