--- a/Skclusive.Blazor.TodoApp/TodoApp.State/TodoApp.State.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.State/TodoApp.State.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ImpromptuInterface" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="1.0.2" />
