--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Dashboard.App.View.csproj
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Dashboard.App.View.csproj
@@ -9,12 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="ChartJs.Blazor" Version="1.0.2" />
-    <!-- <PackageReference Include="Skclusive.Material.Layout" Version="1.0.4-preview1" />
-    <PackageReference Include="Skclusive.Material.Component" Version="1.0.4-preview1" /> -->
+    <PackageReference Include="Skclusive.Material.Layout" Version="1.0.5" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="1.0.4-preview1" />
-    <ProjectReference Include="..\..\..\Skclusive.Material.Component\Material\src\Material.csproj" Version="1.0.4-preview1" />
-  </ItemGroup>
+  <!-- <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="1.0.5" />
+  </ItemGroup> -->
 </Project>
