--- a/Skclusive.Blazor.Material/Material.App.View/Material.App.View.csproj
+++ b/Skclusive.Blazor.Material/Material.App.View/Material.App.View.csproj
@@ -8,14 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ChartJs.Blazor" Version="1.0.2" />
-    <PackageReference Include="Skclusive.Material.Layout" Version="1.0.4-preview1" />
-    <PackageReference Include="Skclusive.Material.Table" Version="1.0.4-preview1" />
-    <PackageReference Include="Skclusive.Material.Progress" Version="1.0.4-preview1" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview4.19579.2" />
+    <PackageReference Include="Skclusive.Material.Layout" Version="1.0.5" />
   </ItemGroup>
 
-  <ItemGroup>
-     <!-- <ProjectReference Include="..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="1.0.4-preview1" /> -->
-    <!-- <ProjectReference Include="..\..\..\Skclusive.Material.Component\Material\src\Material.csproj" Version="1.0.4-preview1" /> -->
-  </ItemGroup>
+  <!-- <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="1.0.5-preview1" />
+  </ItemGroup> -->
 </Project>
