--- a/Skclusive.Blazor.Material/Material.App.View/Material.App.View.csproj
+++ b/Skclusive.Blazor.Material/Material.App.View/Material.App.View.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview4.19579.2" />
-    <PackageReference Include="Skclusive.Material.Layout" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview1.20073.1" />
+    <!-- <PackageReference Include="Skclusive.Material.Layout" Version="2.0.0" /> -->
   </ItemGroup>
 
-  <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="1.1.0-preview1" />
-  </ItemGroup> -->
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="2.0.0" />
+  </ItemGroup>
 </Project>
