--- a/Skclusive.Blazor.Dashboard/Dashboard.App.View/Dashboard.App.View.csproj
+++ b/Skclusive.Blazor.Dashboard/Dashboard.App.View/Dashboard.App.View.csproj
@@ -9,10 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="ChartJs.Blazor" Version="1.0.2" />
-    <!-- <PackageReference Include="Skclusive.Material.Layout" Version="2.0.0" /> -->
+    <PackageReference Include="Skclusive.Material.Layout" Version="2.0.0-rc" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="2.0.0" />
-  </ItemGroup>
+  <!-- <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="2.0.0-rc" />
+  </ItemGroup> -->
 </Project>
