--- a/Skclusive.Blazor.Material/Material.App.View/Material.App.View.csproj
+++ b/Skclusive.Blazor.Material/Material.App.View/Material.App.View.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- <PackageReference Include="Skclusive.Material.Layout" Version="2.0.0" /> -->
+    <PackageReference Include="Skclusive.Material.Layout" Version="2.0.0-rc" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="2.0.0" />
-  </ItemGroup>
+  <!-- <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Material.Layout\src\Skclusive.Material.Layout.csproj" Version="2.0.0-rc" />
+  </ItemGroup> -->
 </Project>
