--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
@@ -14,17 +14,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview2.20160.5" PrivateAssets="all" />
   </ItemGroup>
 
-  <!-- <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="2.0.0" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="2.0.0" />
-  </ItemGroup> -->
-
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="2.0.0" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools\DevTools.csproj" Version="2.0.0" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="2.0.0" />
+    <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0-rc" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="2.0.0-rc" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="2.0.0-rc" />
   </ItemGroup>
+
+  <!-- <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="2.0.0-rc" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools\DevTools.csproj" Version="2.0.0-rc" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="2.0.0-rc" />
+  </ItemGroup> -->
 
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.State\TodoApp.State.csproj" />
