--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
@@ -1,18 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
-    <AssemblyName>Skclusive.Blazor.FlightFinder.Client</AssemblyName>
-    <RootNamespace>Skclusive.Blazor.FlightFinder</RootNamespace>
+    <AssemblyName>Skclusive.Blazor.FlightFinder.View</AssemblyName>
+    <RootNamespace>Skclusive.Blazor.FlightFinder.View</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-rc1.20223.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.0-rc1.20217.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0" />
