--- a/Skclusive.Blazor.Material/Material.Native.Host/Material.Native.Host.csproj
+++ b/Skclusive.Blazor.Material/Material.Native.Host/Material.Native.Host.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>WinExe</OutputType>
     <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>Skclusive.Blazor.Material.Native.Host</AssemblyName>
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <!-- <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0" /> -->
-    <PackageReference Include="WebWindow.Blazor" Version="0.1.0-20200214.10" />
+    <PackageReference Include="WebWindow.Blazor" Version="0.1.0-20200807.1" />
   </ItemGroup>
 
   <ItemGroup>
