--- a/Skclusive.Blazor.Dashboard/Dashboard.Browser.Host/Dashboard.Browser.Host.csproj
+++ b/Skclusive.Blazor.Dashboard/Dashboard.Browser.Host/Dashboard.Browser.Host.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>net5.0</TargetFramework>
+    <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
+    <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
     <AssemblyName>Skclusive.Blazor.Dashboard.Browser.Host</AssemblyName>
     <RootNamespace>Skclusive.Blazor.Dashboard.Browser.Host</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.7.*" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.7.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.7.*" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
