--- a/Skclusive.Blazor.FlightFinder/FlightFinder.Server.Host/FlightFinder.Server.Host.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.Server.Host/FlightFinder.Server.Host.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Blazor.FlightFinder.Server.Host</AssemblyName>
     <RootNamespace>Skclusive.Blazor.FlightFinder.Server.Host</RootNamespace>
   </PropertyGroup>
