--- a/Skclusive.Blazor.FlightFinder/FlightFinder.State/FlightFinder.State.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.State/FlightFinder.State.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Blazor.FlightFinder.State</AssemblyName>
     <RootNamespace>Skclusive.Blazor.FlightFinder</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0-preview.7.*" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="2.0.0" />
     <PackageReference Include="Skclusive.Mobx.StateTree" Version="2.0.0" />
