--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
@@ -1,23 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Blazor.FlightFinder.View</AssemblyName>
     <RootNamespace>Skclusive.Blazor.FlightFinder.View</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="2.0.0" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="2.0.0" />
+    <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.1-preview1" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.1-preview1" />
+    <!-- <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.1-preview1" /> -->
   </ItemGroup>
 
-  <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="2.0.0" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools\DevTools.csproj" Version="2.0.0" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="2.0.0" />
-  </ItemGroup> -->
+  <ItemGroup>
+    <!-- <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="3.0.1-preview1" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="3.0.1-preview1" /> -->
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="3.0.1-preview1" />
+   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FlightFinder.State\FlightFinder.State.csproj" />
