--- a/Skclusive.Blazor.Messenger/Messenger.App.View/Messenger.App.View.csproj
+++ b/Skclusive.Blazor.Messenger/Messenger.App.View/Messenger.App.View.csproj
@@ -1,17 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Blazor.Messenger.App.View</AssemblyName>
     <RootNamespace>Skclusive.Blazor.Messenger.App.View</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Skclusive.Material.Component" Version="2.0.0" />
-  </ItemGroup>
-
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Material.Component\Material\src\Material.csproj" Version="2.0.0" />
+    <PackageReference Include="Skclusive.Material.Component" Version="3.0.1-preview1" />
   </ItemGroup> -->
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Material.Component\Material\src\Material.csproj" Version="3.0.1-preview1" />
+  </ItemGroup>
 </Project>
