--- a/Skclusive.Blazor.Messenger/Messenger.BrowserPrerendered.Host/Messenger.BrowserPrerendered.Host.csproj
+++ b/Skclusive.Blazor.Messenger/Messenger.BrowserPrerendered.Host/Messenger.BrowserPrerendered.Host.csproj
@@ -2,13 +2,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Blazor.Messenger.BrowserPrerendered.Host</AssemblyName>
     <RootNamespace>Skclusive.Blazor.Messenger.BrowserPrerendered.Host</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.0-preview.7.*" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
