--- a/Skclusive.Blazor.Messenger/Messenger.ServerPrerendered.Host/Messenger.ServerPrerendered.Host.csproj
+++ b/Skclusive.Blazor.Messenger/Messenger.ServerPrerendered.Host/Messenger.ServerPrerendered.Host.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Skclusive.Blazor.Messenger.ServerPrerendered.Host</AssemblyName>
     <RootNamespace>Skclusive.Blazor.Messenger.ServerPrerendered.Host</RootNamespace>
   </PropertyGroup>
