--- a/Skclusive.Blazor.TodoDesktop/TodoDesktop.Window/TodoDesktop.Window.csproj
+++ b/Skclusive.Blazor.TodoDesktop/TodoDesktop.Window/TodoDesktop.Window.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>WinExe</OutputType>
     <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>Skclusive.Blazor.TodoDesktop.Window</AssemblyName>
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WebWindow.Blazor" Version="0.1.0-20200214.10" />
+    <PackageReference Include="WebWindow.Blazor" Version="0.1.0-20200807.1" />
   </ItemGroup>
 
   <ItemGroup>
