--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
@@ -9,13 +9,13 @@
   <ItemGroup>
     <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.1-preview1" />
     <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.1-preview1" />
-    <!-- <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.1-preview1" /> -->
+    <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.2-preview1" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="3.0.1-preview1" />
     <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="3.0.1-preview1" /> -->
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="3.0.1-preview1" />
+    <!-- <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="3.0.2-preview1" /> -->
    </ItemGroup>
 
   <ItemGroup>
