--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
@@ -15,15 +15,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="2.0.0" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="2.0.0" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="2.0.0" />
+    <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.1-preview1" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.2-preview1" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.1-preview1" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="2.0.0" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools\DevTools.csproj" Version="2.0.0" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="2.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="3.0.1-preview1" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools\DevTools.csproj" Version="3.0.2-preview1" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="3.0.1-preview1" />
   </ItemGroup> -->
 
   <ItemGroup>
