--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
@@ -6,16 +6,16 @@
     <RootNamespace>Skclusive.Blazor.FlightFinder.View</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.1-preview1" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.1-preview1" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.2-preview1" />
-  </ItemGroup>
+  <!-- <ItemGroup>
+    <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.0-preview2" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.0-preview2" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.0-preview2" />
+  </ItemGroup> -->
 
   <ItemGroup>
-    <!-- <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="3.0.1-preview1" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="3.0.1-preview1" /> -->
-    <!-- <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="3.0.2-preview1" /> -->
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component.csproj" Version="3.0.0-preview2" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers.csproj" Version="3.0.0-preview2" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="3.0.0-preview2" />
    </ItemGroup>
 
   <ItemGroup>
