--- a/Skclusive.Blazor.Dashboard/Dashboard.Browser.Host/Dashboard.Browser.Host.csproj
+++ b/Skclusive.Blazor.Dashboard/Dashboard.Browser.Host/Dashboard.Browser.Host.csproj
@@ -1,17 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
     <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
     <AssemblyName>Skclusive.Blazor.Dashboard.Browser.Host</AssemblyName>
     <RootNamespace>Skclusive.Blazor.Dashboard.Browser.Host</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.7.*" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.7.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.7.*" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.*" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.*" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
