--- a/Skclusive.Blazor.Material/Material.BrowserPrerendered.Host/Material.BrowserPrerendered.Host.csproj
+++ b/Skclusive.Blazor.Material/Material.BrowserPrerendered.Host/Material.BrowserPrerendered.Host.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.0-preview.7.*" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.0-rc.1.*" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
