--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
@@ -1,30 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
     <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
     <AssemblyName>Skclusive.Blazor.TodoApp.Client</AssemblyName>
     <RootNamespace>Skclusive.Blazor.TodoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.7.*" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.7.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.7.*" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.1-preview1" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.2-preview1" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.1-preview1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.*" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.*" PrivateAssets="all" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component\Component.csproj" Version="3.0.1-preview1" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools\DevTools.csproj" Version="3.0.2-preview1" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers\DomHelpers.csproj" Version="3.0.1-preview1" />
+    <PackageReference Include="Skclusive.Mobx.Component" Version="3.0.0-preview2" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="3.0.2-preview1" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="3.0.0-preview2" />
   </ItemGroup> -->
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component.csproj" Version="3.0.0-preview2" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="3.0.2-preview1" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers.csproj" Version="3.0.0-preview2" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.State\TodoApp.State.csproj" />
