--- a/Skclusive.Blazor.TodoApp/TodoApp.State/TodoApp.State.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.State/TodoApp.State.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0-preview.7.*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0-rc.1.*" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Skclusive.Mobx.Observable" Version="2.0.0" />
     <PackageReference Include="Skclusive.Mobx.StateTree" Version="2.0.0" />
