--- a/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
+++ b/Skclusive.Blazor.FlightFinder/FlightFinder.View/FlightFinder.View.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="5.0.0-rc5" />
+    <PackageReference Include="Skclusive.Mobx.Component" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="5.0.0" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component.csproj" Version="5.0.0-rc4" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers.csproj" Version="5.0.0-rc4" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="5.0.0-rc5" />
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component.csproj" Version="5.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers.csproj" Version="5.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="5.0.0" />
    </ItemGroup> -->
 
   <ItemGroup>
