--- a/Skclusive.Blazor.Messenger/Messenger.App.View/Messenger.App.View.csproj
+++ b/Skclusive.Blazor.Messenger/Messenger.App.View/Messenger.App.View.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Material.Component" Version="5.0.0-rc4" />
+    <PackageReference Include="Skclusive.Material.Component" Version="5.0.0" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Material.Component\Material\src\Material.csproj" Version="5.0.0-rc4" />
+    <ProjectReference Include="..\..\..\Skclusive.Material.Component\Material\src\Material.csproj" Version="5.0.0" />
   </ItemGroup> -->
 </Project>
