--- a/Skclusive.Blazor.StateTree/StateTree.App.State/StateTree.App.State.csproj
+++ b/Skclusive.Blazor.StateTree/StateTree.App.State/StateTree.App.State.csproj
@@ -8,16 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0-rc.2.*" />
-    <PackageReference Include="Skclusive.Extensions.DependencyInjection" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Mobx.StateTree" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Reactive.Flow" Version="5.0.0-rc5" />
-    <PackageReference Include="Skclusive.Text.Json" Version="5.0.0-rc5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Extensions.DependencyInjection" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Mobx.StateTree" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Reactive.Flow" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Text.Json" Version="5.0.0" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.StateTree\src\StateTree.csproj" Version="5.0.0-rc4" />
-    <ProjectReference Include="..\..\..\Skclusive.Reactive.Flow\src\Flow.csproj" Version="5.0.0-rc5" />
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.StateTree\src\StateTree.csproj" Version="5.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Reactive.Flow\src\Flow.csproj" Version="5.0.0" />
   </ItemGroup> -->
 
 </Project>
