--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/TodoApp.Client.csproj
@@ -8,21 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.2.*" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.2.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.2.*" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Skclusive.Mobx.Component" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Script.DomHelpers" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Script.DevTools" Version="5.0.0-rc5" />
+    <PackageReference Include="Skclusive.Mobx.Component" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Script.DomHelpers" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Script.DevTools" Version="5.0.0" />
   </ItemGroup>
 
   <!-- <ItemGroup>
-    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component.csproj" Version="5.0.0-rc4" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers.csproj" Version="5.0.0-rc4" />
-    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="5.0.0-rc5" />
+    <ProjectReference Include="..\..\..\Skclusive.Mobx.Component\src\Component.csproj" Version="5.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DomHelpers\src\DomHelpers.csproj" Version="5.0.0" />
+    <ProjectReference Include="..\..\..\Skclusive.Script.DevTools\src\DevTools.csproj" Version="5.0.0" />
   </ItemGroup> -->
 
   <ItemGroup>
