--- a/Skclusive.Blazor.TodoDesktop/TodoDesktop.State/TodoDesktop.State.csproj
+++ b/Skclusive.Blazor.TodoDesktop/TodoDesktop.State/TodoDesktop.State.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0-rc.2.*" />
-    <PackageReference Include="Skclusive.Extensions.DependencyInjection" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Mobx.StateTree" Version="5.0.0-rc4" />
-    <PackageReference Include="Skclusive.Mobx.StateTree.Proxy" Version="5.0.0-rc4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Extensions.DependencyInjection" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Mobx.Observable" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Mobx.StateTree" Version="5.0.0" />
+    <PackageReference Include="Skclusive.Mobx.StateTree.Proxy" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
